cleanup exp scripts